[gd_scene load_steps=3 format=3]

[ext_resource type="Script" uid="uid://dkoowbi07rkdm" path="res://horror_ui_ui_scenes/ui/DeathScreen.gd" id="1"]

[node name="DeathScreen" type="CanvasLayer"]
script = ExtResource("1")

[node name="Root" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="Root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0, 0, 1)

[node name="MessageLabel" type="Label" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.2
anchor_top = 0.3
anchor_right = 0.8
anchor_bottom = 0.4
text = "you failed again."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="Root"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.35
anchor_top = 0.55
anchor_right = 0.65
anchor_bottom = 0.75
theme_override_constants/separation = 12
visible = false

[node name="RetryButton" type="Button" parent="Root/ButtonsVBox"]
layout_mode = 2
text = "Retry"

[node name="MainMenuButton" type="Button" parent="Root/ButtonsVBox"]
layout_mode = 2
text = "Main Menu"

[node name="DelayTimer" type="Timer" parent="Root"]
one_shot = true
wait_time = 2.0